packages/typ/tests/fixtures/diagnostics/0972_mli_nested_path_zeroary_overapplied_03.mli.infer.expected
File "0972_mli_nested_path_zeroary_overapplied_03.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0972_mli_nested_path_zeroary_overapplied_03 is not a valid module name.

File "0972_mli_nested_path_zeroary_overapplied_03.mli", line 7, characters 14-37:
7 | val x_gamma : int Outer_gamma.Inner.t
                  ^^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor Outer_gamma.Inner.t expects 0 argument(s),
       but is here applied to 1 argument(s)
