packages/typ/tests/fixtures/diagnostics/0972_mli_nested_path_zeroary_overapplied_03.mli
module Outer_gamma : sig
  module Inner : sig
    type t
  end
end

val x_gamma : int Outer_gamma.Inner.t
